--- a/blogpost.html
+++ b/blogpost.html
@@ -4,7 +4,11 @@
     <link rel="stylesheet" href="css/estilos.css" />
   </head>
   <body>
-    <h1>Vamos hacer un blog post</h1>
-    <p>Parrafo de inicio</p>
+    <div id="container">
+      <div id="post">
+        <h1>Este es el título</h1>
+        <p>Este es el parrafo de inicio</p>
+      </div>
+    </div>
   </body>
 </html>
