Agregado el contenido adicional del blog y una tipografia preferida por el autor

--- a/blogpost.html
+++ b/blogpost.html
@@ -8,6 +8,10 @@
       <div id="post">
         <h1>Este es el título</h1>
         <p>Este es el parrafo de inicio</p>
+        <p>
+          No se que escribir por lo tanto por el meme seguiré hablando de la
+          chamba ya que es actualmente clave en los pesares de mi alma.
+        </p>
       </div>
     </div>
   </body>
