--- a/blogpost.html
+++ b/blogpost.html
@@ -7,7 +7,7 @@
     <div id="container">
       <div id="cabecera">
         CAMBIO DE CHAMBA PLEASE 😭😭😭
-        <span id="tagline">palabras sobre chamba</span>
+        <span id="tagline">blog de cabecera</span>
       </div>
       <div id="post">
         <h1>Este es el título</h1>
