--- a/blogpost.html
+++ b/blogpost.html
@@ -7,7 +7,7 @@
     <div id="container">
       <div id="cabecera">
         CAMBIO DE CHAMBA PLEASE 😭😭😭
-        <span id="tagline">palabras sobre chamba</span>
+        <span id="tagline">blog maestro</span>
       </div>
       <div id="post">
         <h1>Este es el título</h1>
@@ -16,6 +16,7 @@
           No se que escribir por lo tanto por el meme seguiré hablando de la
           chamba ya que es actualmente clave en los pesares de mi alma.
         </p>
+        <p>Mondá no merecedora de lectura...</p>
       </div>
     </div>
   </body>
