Finalizado el titulo del post

--- a/blogpost.html
+++ b/blogpost.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Bienvenido al universo interno de Oni</title>
+    <title>Bienvenido al universo interno de Oni 1.0</title>
     <link rel="stylesheet" href="css/estilos.css" />
   </head>
   <body>
