Color de fondo, logo nuevo y mejor color de header

--- a/blogpost.html
+++ b/blogpost.html
@@ -6,17 +6,18 @@
   <body>
     <div id="container">
       <div id="cabecera">
-        CAMBIO DE CHAMBA PLEASE 😭😭😭
-        <span id="tagline">Blog chimba</span>
+        <img src="imagenes/dragon.png" id="logo" />
+        Universo Interno
+        <span id="tagline">Blog personal de muestra</span>
       </div>
       <div id="post">
         <h1>Este es el título</h1>
         <p>Este es el parrafo de inicio</p>
+        <p>Un párrafo hablando de como me encantan los juegos de pelea 2D</p>
         <p>
-          No se que escribir por lo tanto por el meme seguiré hablando de la
-          chamba ya que es actualmente clave en los pesares de mi alma.
+          Otro párrafo hablando de juegos peleas, probablemente sobre como
+          practicar combos es terapeutico.
         </p>
-        <p>Mondá no merecedora de lectura...</p>
       </div>
     </div>
   </body>
