--- a/blogpost.html
+++ b/blogpost.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <title>Bienvenido al universo interno de Oni 1.0</title>
+    <meta charset="utf-8" />
     <link rel="stylesheet" href="css/estilos.css" />
   </head>
   <body>
@@ -18,6 +19,7 @@
         </p>
         <p>Mondá no merecedora de lectura...</p>
       </div>
+      <div id="footer">Construyendo mejores tiempos &lt;3</div>
     </div>
   </body>
 </html>
