Texto cambiado a ser más adecuado

--- a/blogpost.html
+++ b/blogpost.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Bienvenido al universo interno de Oni 1.0</title>
+    <title>Blog para practicar el flujo de git</title>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="css/estilos.css" />
   </head>
@@ -8,19 +8,21 @@
     <div id="container">
       <div id="cabecera">
         <img src="imagenes/dragon.png" id="logo" />
-        Universo Interno
-        <span id="tagline">Blog personal de muestra</span>
+        Primeros pasos
+        <span id="tagline">Blog de práctica</span>
       </div>
       <div id="post">
         <h1>Este es el título</h1>
         <p>Este es el parrafo de inicio</p>
-        <p>Un párrafo hablando de como me encantan los juegos de pelea 2D</p>
         <p>
-          Otro párrafo hablando de juegos peleas, probablemente sobre como
-          practicar combos es terapeutico.
+          Los blogs me parecen bastante interesantes, tal vez cuando haya
+          aprendido más sobre herramientas de desarrollo web me atreva a hacer
+          uno personal como un proyecto de práctica y otro no tan personal para
+          presentar al buscar trabajos
         </p>
+        <p>Pequeño párrafo de conclusión</p>
       </div>
-      <div id="footer">Construyendo mejores tiempos &lt;3</div>
+      <div id="footer">Aprendiendo a aprender &lt;3</div>
     </div>
   </body>
 </html>
