--- a/blogpost.html
+++ b/blogpost.html
@@ -9,18 +9,18 @@
       <div id="cabecera">
         <img src="imagenes/dragon.png" id="logo" />
         Primeros pasos
-        <span id="tagline">Blog de práctica</span>
+        <span id="tagline">Blog de pr&aacute;ctica</span>
       </div>
       <div id="post">
         <h1>Este es el título</h1>
-        <p>Este es el parrafo de inicio</p>
+        <p>Este es el p&aacute;rrafo de inicio</p>
         <p>
           Los blogs me parecen bastante interesantes, tal vez cuando haya
-          aprendido más sobre herramientas de desarrollo web me atreva a hacer
-          uno personal como un proyecto de práctica y otro no tan personal para
-          presentar al buscar trabajos
+          aprendido m&aacute;s sobre herramientas de desarrollo web me atreva a
+          hacer uno personal como un proyecto de pr&aacute;ctica y otro no tan
+          personal para presentar al buscar trabajos
         </p>
-        <p>Pequeño párrafo de conclusión</p>
+        <p>Pequeño p&aacute;rrafo de conclusión</p>
       </div>
       <div id="footer">Aprendiendo a aprender &lt;3</div>
     </div>
