Cambio a entidades html en vez de tildes 2

--- a/blogpost.html
+++ b/blogpost.html
@@ -12,7 +12,7 @@
         <span id="tagline">Blog de pr&aacute;ctica</span>
       </div>
       <div id="post">
-        <h1>Este es el título</h1>
+        <h1>Este es el t&iacute;tulo</h1>
         <p>Este es el p&aacute;rrafo de inicio</p>
         <p>
           Los blogs me parecen bastante interesantes, tal vez cuando haya
@@ -20,7 +20,7 @@
           hacer uno personal como un proyecto de pr&aacute;ctica y otro no tan
           personal para presentar al buscar trabajos
         </p>
-        <p>Pequeño p&aacute;rrafo de conclusión</p>
+        <p>Pequeño p&aacute;rrafo de conclusi&oacute;n</p>
       </div>
       <div id="footer">Aprendiendo a aprender &lt;3</div>
     </div>
