Agregados puntos faltantes a cada parrafo

--- a/blogpost.html
+++ b/blogpost.html
@@ -13,14 +13,14 @@
       </div>
       <div id="post">
         <h1>Este es el t&iacute;tulo</h1>
-        <p>Este es el p&aacute;rrafo de inicio</p>
+        <p>Este es el p&aacute;rrafo de inicio.</p>
         <p>
           Los blogs me parecen bastante interesantes, tal vez cuando haya
           aprendido m&aacute;s sobre herramientas de desarrollo web me atreva a
           hacer uno personal como un proyecto de pr&aacute;ctica y otro no tan
-          personal para presentar al buscar trabajos
+          personal para presentar al buscar trabajos.
         </p>
-        <p>Pequeño p&aacute;rrafo de conclusi&oacute;n</p>
+        <p>Pequeño p&aacute;rrafo de conclusi&oacute;n.</p>
       </div>
       <div id="footer">Aprendiendo a aprender &lt;3</div>
     </div>
