--- a/blogpost.html
+++ b/blogpost.html
@@ -14,6 +14,7 @@
       <div id="post">
         <h1>Este es el t&iacute;tulo</h1>
         <p>Este es el p&aacute;rrafo de inicio.</p>
+        <p><img src="imagenes/Tosaka_Rin_Learning_JS.png" width="100%" /></p>
         <p>
           Los blogs me parecen bastante interesantes, tal vez cuando haya
           aprendido m&aacute;s sobre herramientas de desarrollo web me atreva a
