Referenciando la imagen desde otro medio

--- a/blogpost.html
+++ b/blogpost.html
@@ -14,7 +14,12 @@
       <div id="post">
         <h1>Este es el t&iacute;tulo</h1>
         <p>Este es el p&aacute;rrafo de inicio.</p>
-        <p><img src="imagenes/Tosaka_Rin_Learning_JS.png" width="100%" /></p>
+        <p>
+          <img
+            src="https://raw.githubusercontent.com/cat-milk/Anime-Girls-Holding-Programming-Books/master/Javascript/Tosaka_Rin_Learning_JS.png"
+            width="100%"
+          />
+        </p>
         <p>
           Los blogs me parecen bastante interesantes, tal vez cuando haya
           aprendido m&aacute;s sobre herramientas de desarrollo web me atreva a
